feat(profile): Level change

--- a/src/app/changelog/changelog.component.scss
+++ b/src/app/changelog/changelog.component.scss
@@ -10,6 +10,7 @@ h3 {
 .changes {
     .change-content {
         margin: 8px 0;
+        text-align: justify;
     }
 
     .type {
@@ -17,7 +18,7 @@ h3 {
         padding: 4px 8px;
         font-weight: bold;
         color: white;
-        width: 120px;
+        width: 130px;
         display: inline-block;
         text-align: center;
         margin-right: 16px;
