--- a/src/app/changelog/changelog.component.scss
+++ b/src/app/changelog/changelog.component.scss
@@ -30,6 +30,10 @@ h3 {
         &.bug {
             background: #ff5722;
         }
+
+        &.enhancement {
+            background: #2196f3;
+        }
     }
 }
 
