--- a/src/app/workouts/cdk/session/session.component.scss
+++ b/src/app/workouts/cdk/session/session.component.scss
@@ -6,7 +6,7 @@ $lighter-grey: #f2f3f5;
 .working-out {
     height: 100%;
     display: grid;
-    grid-template-rows: 1fr 3fr 2fr 1fr;
+    grid-template-rows: 0.5fr 1.5fr 2.5fr 0.5fr;
 }
 
 h2 {
@@ -46,6 +46,12 @@ h2 {
     text-align: center;
     align-self: center;
 
+    .rest-images {
+        img {
+            width: 64px;
+        }
+    }
+
     img {
         max-width: 60%;
         border-radius: 3px;
@@ -60,7 +66,7 @@ h2 {
     padding: 16px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 
     .reps,
     .time,
@@ -80,23 +86,28 @@ h2 {
     .exercise-actions {
         display: flex;
         justify-content: space-around;
+
+        .reps-done-btn {
+            transform: scale(1.3);
+        }
     }
 }
 
 .exercise-rest {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 
     form {
         text-align: center;
 
         mat-form-field {
             width: 60%;
-            font-size: 2em;
+            font-size: 1.5em;
 
             input {
                 text-align: center;
+                font-size: 2.5em;
             }
         }
 
