--- a/src/app/workouts/cdk/session/session.component.scss
+++ b/src/app/workouts/cdk/session/session.component.scss
@@ -100,6 +100,9 @@ h2 {
 
     form {
         text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
 
         mat-form-field {
             width: 60%;
