feat(session-plan): Display Objective instead of planning frequency

--- a/src/app/workouts/level/level2/level2.component.html
+++ b/src/app/workouts/level/level2/level2.component.html
@@ -5,19 +5,11 @@
 
             <mat-card class="training-frequency">
                 <h3>
-                    Fréquence d'entrainement
+                    Objectif général
                     <button mat-raised-button color="primary" (click)="workout.nextStep()">C'est parti</button>
                 </h3>
-                <ul>
-                    <li>
-                        <span>1ère semaine</span>
-                        <span>Lundi, mardi, jeudi, vendredi</span>
-                    </li>
-                    <li>
-                        <span>Ensuite</span>
-                        <span>Le lundi, le mercredi et le vendredi</span>
-                    </li>
-                </ul>
+                <p>Essayez d'ajouter à chaque entrainement, une répétition à chaque série de chaque exercice, jusqu'a
+                    atteindre <b>8 a 10 répétitions</b> (sauf G et K)</p>
             </mat-card>
         </app-workout-plan>
 
