feat(level): Add level 3

--- a/src/app/workouts/level/level3/level3.component.html
+++ b/src/app/workouts/level/level3/level3.component.html
@@ -5,7 +5,7 @@
 
             <app-training-objective (go)="workout.nextStep()">
                 Essayez d'ajouter à chaque entrainement, une répétition à chaque série de chaque exercice, jusqu'a
-                atteindre <b>8 a 10 répétitions</b> (sauf G et K)
+                atteindre <b>10 répétitions</b> sur l'exercise B2
             </app-training-objective>
         </app-workout-plan>
 
