feat(level): Level 4 added

--- a/src/app/workouts/cdk/session-plan/session-plan.component.html
+++ b/src/app/workouts/cdk/session-plan/session-plan.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngFor="let exercise of session">
         <li>
             <img [src]="exercise.image" [alt]="'Exercice' + exercise.name"
-                [ngClass]="{'flip-vertically': exercise.side === 'right'}">
+                [ngClass]="{'flip-vertically': exercise.side === 'left'}">
             <div class="exercise-description">
                 <span class="exercise-name mat-title">
                     {{exercise.name}}
