--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,23 +1,25 @@
 <h1>À propos</h1>
 
 <p>
-    Cette application n'est pas officielle.<br>
-    L'auteur en avait besoin et ne trouvait d'équivalent disponible
-    😅. <br>
-    Si vous voulez aider, que vous soyiez développeur ou vouliez juste soumettre un bug, tout le code est disponible
-    en Open Source sur <a [href]="githubRepo" target="_blank">Github</a>.
+  Cette application n'est pas officielle.<br />
+  L'auteur en avait besoin et ne trouvait d'équivalent disponible 😅. <br />
+  Si vous voulez aider, que vous soyez développeur ou vouliez juste soumettre un
+  bug, tout le code est disponible en Open Source sur
+  <a [href]="githubRepo" target="_blank">Github</a>.
 </p>
 
 <p>
-    Si vous ne possédez pas <a [href]="linkAmazon">la Méthode</a>, je vous conseille vivement de vous la procurer, car
-    le manuel déborde
-    d'informations plus intéressantes les unes que les autres ! <br>
-    De plus, si vous l'achetez sur le lien ci-dessous, vous pourrez soutenir ce projet ! 🤗<br>
+  Si vous ne possédez pas <a [href]="linkAmazon">la Méthode</a>, je vous
+  conseille vivement de vous la procurer, car le manuel déborde d'informations
+  plus intéressantes les unes que les autres ! <br />
+  De plus, si vous l'achetez sur le lien ci-dessous, vous pourrez soutenir ce
+  projet ! 🤗<br />
 </p>
 
 <div class="buy-book">
-    <a target="_blank" [href]="linkAmazon">
-        <img
-            src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=FR&ASIN=2851806424&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL160_&tag=bcldvd-21">
-    </a>
+  <a target="_blank" [href]="linkAmazon">
+    <img
+      src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=FR&ASIN=2851806424&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL160_&tag=bcldvd-21"
+    />
+  </a>
 </div>
