--- a/src/app/workouts/level/level6/level6.component.html
+++ b/src/app/workouts/level/level6/level6.component.html
@@ -4,9 +4,8 @@
       <app-session-plan [session]="session"></app-session-plan>
 
       <app-training-objective (go)="workout.nextStep()">
-        Essayez d'ajouter à chaque entrainement, une répétition à chaque série
-        de chaque exercice, jusqu'a atteindre <b>8 répétitions</b> sur chaque
-        exercice (à part pour G, H, et K2)
+        6 fois <b>10 répétitions</b> à <b>B1, A2, I</b> et <b>C1</b>. Si vous
+        faites plus (jusqu'à 6 foix 15 répétitions), tant mieux.
       </app-training-objective>
     </app-workout-plan>
 
